# DarkDefence

./: .gitignore  CMakeLists.txt  DarkDefence.pro  ExternalToolsAndLibs.txt  README.md  Tasks.txt
src/: CMakeLists.txt  Enums.h  GameApp.cpp  GameApp.h  GlobalConstants.h  SDL_Engine.cpp  SDL_Engine.h  main.cpp
src/AI/: AIComponent.cpp  AIComponent.h
src/AbilitySystem/: AbilityEarthquake.cpp  AbilityEarthquake.h  AbilityMagicBlink.cpp  AbilityMagicBlink.h  AbilityMagicStones.cpp  AbilityMagicStones.h  AbilityModel.cpp  AbilityModel.h  AbilityObjectSpawn.h  AbilityPrick.cpp  AbilityPrick.h  AbilityShrink.cpp  AbilityShrink.h  AbilitySnowStorm.cpp  AbilitySnowStorm.h  BlinkObject.cpp  BlinkObject.h  DestructibleObjectEffectReceiver.cpp  DestructibleObjectEffectReceiver.h  EffectModel.cpp  EffectModel.h  EffectReceiver.cpp  EffectReceiver.h  MobEffectReceiver.cpp  MobEffectReceiver.h  PrickObject.cpp  PrickObject.h  SpellStorage.cpp  SpellStorage.h
src/AbilitySystem/AbilityAnims/: AbilityAnimObject.cpp  AbilityAnimObject.hpp  AbilityMultitargetObject.cpp  AbilityMultitargetObject.hpp
src/AbilitySystem/ItemAbilities/: BurningAxe.cpp  BurningAxe.h  BurningStick.cpp  BurningStick.h  CaftanOfGold.cpp  CaftanOfGold.h  ChoppersHat.cpp  ChoppersHat.h  CorruptedPineApple.cpp  CorruptedPineApple.h  FeatherOfChap.cpp  FeatherOfChap.h  GoldPick.cpp  GoldPick.h  GulakiAmulet.cpp  GulakiAmulet.h  HelmOfGold.cpp  HelmOfGold.h  HelmOfLigofglass.cpp  HelmOfLigofglass.h  IceBoots.cpp  IceBoots.h  IceTalisman.cpp  IceTalisman.h  ItemAbilitiesStorage.cpp  ItemAbilitiesStorage.h  ItemAbility.cpp  ItemAbility.h  MagicWheat.cpp  MagicWheat.h  MerchantsCaftan.cpp  MerchantsCaftan.h  MerchantsHat.cpp  MerchantsHat.h  MonolithShard.cpp  MonolithShard.h  RockSpike.cpp  RockSpike.h  SteelShield.cpp  SteelShield.h  (+6 more)
src/AbilitySystem/MobAbilities/: GulakiUpgrade.cpp  GulakiUpgrade.h  MobAbilitiesMaker.cpp  MobAbilitiesMaker.h  MobAbility.cpp  MobAbility.h  MobAbilityArson.cpp  MobAbilityArson.h  MobAbilityFog.cpp  MobAbilityFog.h  MobAbilityHeal.cpp  MobAbilityHeal.h  MobAbilityInvisiblity.cpp  MobAbilityInvisiblity.h  MobAbilityInvulnerablity.cpp  MobAbilityInvulnerablity.h  MobAbilityRegeneration.cpp  MobAbilityRegeneration.h  MobAbilitySprint.cpp  MobAbilitySprint.h  MobAbilitySummon.cpp  MobAbilitySummon.h  MobAbilityWheat.cpp  MobAbilityWheat.h  MobCloudTowerAbility.cpp  MobCloudTowerAbility.h  MobEarthTowerAbility.cpp  MobEarthTowerAbility.h  MobMageTowerAbility.cpp  MobMageTowerAbility.h  TitanChockMassSlow.cpp  TitanChockMassSlow.h  TitanChockUpgrade.cpp  TitanChockUpgrade.h
src/AudioSystem/: Music.cpp  Music.hpp  Sound.cpp  Sound.hpp
src/GlobalScripts/: AccountModel.cpp  AccountModel.h  GameModel.cpp  GameModel.h  ManaGlobal.cpp  ManaGlobal.h  Renderer.cpp  Renderer.h  ResourceInfo.cpp  ResourceInfo.h  ResourceManager.cpp  ResourceManager.h  ResourcesModel.cpp  ResourcesModel.h  TileMapManager.cpp  TileMapManager.h
src/GraphicsSystem/: CFont.cpp  CFont.h  CTexture.cpp  CTexture.h  Camera.cpp  Camera.h  GraphicsManager.cpp  GraphicsManager.h  IDrawable.h  ShopItemUI.cpp  ShopItemUI.h  Sprite.cpp  Sprite.h  Terrain.cpp  Terrain.h  Tile.cpp  Tile.h
src/GraphicsSystem/UI/: AnimatedSprite.cpp  AnimatedSprite.h  CompositeLabel.cpp  CompositeLabel.h  GroupBox.cpp  GroupBox.h  ImageButton.cpp  ImageButton.h  Label.cpp  Label.h  MapIndicator.cpp  MapIndicator.h  MissionView.cpp  MissionView.h  ProgressBar.cpp  ProgressBar.h  ScrollList.cpp  ScrollList.h  SlotContainer.cpp  SlotContainer.h  StateButton.cpp  StateButton.h  TextButton.cpp  TextButton.h
src/GraphicsSystem/newSystem/: Camera2D.cpp  Camera2D.h  Composite.cpp  Composite.h  Font.cpp  Font.h  HorizontalLayout.cpp  HorizontalLayout.h  IComposite.h  IHasIdentifier.cpp  IHasIdentifier.h  ILayout.h  Leaf.cpp  Leaf.h  Position.cpp  Position.h  RenderingSystem.cpp  RenderingSystem.h  Size.cpp  Size.h  StubLayout.h  Texture2D.cpp  Texture2D.h  TileTerrainMaker.cpp  TileTerrainMaker.h  UtilityStructs.cpp  UtilityStructs.h  VerticalLayout.cpp  VerticalLayout.h
src/Grouping/: FontManager.cpp  FontManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneObject.cpp  SceneObject.h  SceneObjectFabric.cpp  SceneObjectFabric.h
src/Input/: InputDispatcher.cpp  InputDispatcher.h  InputHandler.cpp  InputHandler.h  SceneInputHandler.cpp  SceneInputHandler.h
src/ItemSystem/: HeroInventory.cpp  HeroInventory.h  HeroInventoryController.cpp  HeroInventoryController.h  Inventory.cpp  Inventory.h  InventoryController.cpp  InventoryController.h  ItemCell.cpp  ItemCell.h  ItemModel.cpp  ItemModel.h  ShopController.cpp  ShopController.h  ShopInventory.cpp  ShopInventory.h  ShopInventoryController.cpp  ShopInventoryController.h
src/Logging/: Logger.cpp  Logger.h
src/MissionSystem/: BasicGoal.cpp  BasicGoal.h  Mission.cpp  Mission.h  ResourceGoal.cpp  ResourceGoal.h  Reward.cpp  Reward.h
src/Mob/: ArrowAnim.cpp  ArrowAnim.h  DestructibleObject.cpp  DestructibleObject.h  EnemyInfo.cpp  EnemyInfo.h  Gates.cpp  Gates.h  Mine.cpp  Mine.h  MineModel.cpp  MineModel.h  Mob.cpp  Mob.h  MobModel.cpp  MobModel.h  MobSpawner.cpp  MobSpawner.h  ResourcePlace.cpp  ResourcePlace.h  Spawner.cpp  Spawner.h  StorageModel.cpp  StorageModel.h  Tower.cpp  Tower.h  TowerFabric.cpp  TowerFabric.hpp  TowerUpgradeController.cpp  TowerUpgradeController.h
src/SaveData/: DataGenerator.cpp  DataGenerator.h
src/Scenes/: CMakeLists.txt  GameScene.cpp  GameScene.h  InventoryScene.cpp  InventoryScene.h  MainScene.cpp  MainScene.h  MapMenuScene.cpp  MapMenuScene.h  ScoreScene.cpp  ScoreScene.h  ShopScene.cpp  ShopScene.h
src/Utility/: NTree.cpp  NTree.h  Observer.cpp  Observer.h  Size.h  StructData.hpp  Subject.h  TextureData.hpp  TreeNode.hpp  TreeNode_impl.hpp  textfilefunctions.cpp  textfilefunctions.h
test/: CMakeLists.txt
test/GlobalScripts/: CMakeLists.txt  TileMapManagerTests.cpp
test/Scenes/: CMakeLists.txt  GameSceneTests.cpp
tools/PathMapFromTiled/: CMakeLists.txt
tools/animGenerator/: CMakeLists.txt  ReadMe.txt
tools/dataGenerator/: CMakeLists.txt
(+95 files in other folders)
